--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -384,14 +384,18 @@ input:focus {
   margin-top: 10px;
   font-size: 1.8rem;
   transition: ease-in-out 0.5s;
-  cursor: hover !important;
+  cursor: pointer !important;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 
 .productCard__cta:hover {
   background-color: var(--green);
   color: #fff;
   transition: 0.5s ease-in-out;
-  cursor: hover;
+  cursor: pointer !important;
 }
 
 /* lets make it reponsive */
@@ -475,4 +479,466 @@ input:focus {
   .top_header {
     padding: 0 3rem;
   }
+}
+
+/* CSS loader */
+
+.loader {
+  display: flex;
+  width: 100%;
+  height: 80vh;
+  align-items: center;
+  justify-content: center;
+}
+
+.lds-facebook {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-facebook div {
+  display: inline-block;
+  position: absolute;
+  left: 8px;
+  width: 16px;
+  background: var(--green);
+  animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+}
+.lds-facebook div:nth-child(1) {
+  left: 8px;
+  animation-delay: -0.24s;
+}
+.lds-facebook div:nth-child(2) {
+  left: 32px;
+  animation-delay: -0.12s;
+}
+.lds-facebook div:nth-child(3) {
+  left: 56px;
+  animation-delay: 0;
+}
+@keyframes lds-facebook {
+  0% {
+    top: 8px;
+    height: 64px;
+  }
+  50%,
+  100% {
+    top: 24px;
+    height: 32px;
+  }
+}
+
+/* Breadcrumb */
+
+.breadcrumb {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  height: 40px;
+  width: 100%;
+  text-transform: capitalize;
+  padding: 3rem 8rem;
+  font-size: 2rem;
+  color: #818a82;
+}
+
+/* productDetails */
+
+.productDetail_ {
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+  font-family: "poppins", sans-serif;
+}
+
+.productDetail_right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+  margin-bottom: 30px;
+}
+
+.productDetail_left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+  /* border: 1px solid black; */
+  margin-bottom: 30px;
+}
+
+.productDetail_img_holder {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.productDetail_mimg {
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--bg-grey);
+  height: 500px;
+  border-radius: 15px;
+  margin-bottom: 30px;
+}
+
+.productDetail__imgs {
+  display: flex;
+  width: 90%;
+}
+
+.productDetail_simg {
+  padding: 2rem 4rem;
+  background-color: var(--bg-grey);
+  margin-right: 30px;
+  border-radius: 15px;
+}
+
+.productDetail_right_ {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+}
+
+.productDetail_1 {
+  margin-bottom: 20px;
+}
+
+.productDetail_2 {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.productDetail_3 {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.productDetail_name {
+  font-size: 4.2rem;
+  font-weight: 600;
+  /* margin-bottom: 10px; */
+}
+
+.productDetail_desc {
+  font-size: 1.8rem;
+  color: #5e5e5e;
+}
+
+.productDetail_rating {
+  display: flex;
+  align-items: center;
+}
+
+.productDetail_rating span {
+  font-size: 1.4rem;
+}
+
+.productDetail_price {
+  font-size: 3rem;
+  font-weight: 600;
+}
+
+.productDetail_pricen {
+  font-size: 1.4rem;
+  color: #5e5e5e;
+}
+
+.productDetail_opt {
+  font-size: 2.8rem;
+  font-weight: 600;
+}
+
+.productDetail_opt_ {
+  display: flex;
+  width: 100%;
+  padding: 2rem 1rem;
+  padding-bottom: 0.5rem;
+}
+
+.productDetail_opt__ {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: red;
+  margin-right: 30px;
+  border: 1px soild black !important;
+  cursor: pointer;
+  padding: 0.2rem;
+}
+
+.productDetail_counter {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding: 2rem 0rem;
+  padding-top: 0;
+}
+
+.productDetail_counter_ {
+  width: 24%;
+  background-color: var(--bg-grey);
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 2.8rem;
+  padding: 0.6rem 0;
+  border-radius: 30px;
+  margin-right: 60px;
+}
+
+.productDetail_counter_ div {
+  cursor: pointer;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+
+.gj {
+  color: var(--lr-green);
+  cursor: default;
+}
+
+.productDetail_stock {
+  font-size: 1.6rem;
+}
+
+.productDetail_stock span {
+  color: var(--lr-green);
+}
+
+.productDetail_ctas {
+  display: flex;
+  width: 100%;
+}
+
+.productDetail_b {
+  width: 30%;
+  border-radius: 30px;
+  background-color: var(--green);
+  cursor: pointer;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2.8rem;
+  font-weight: 500;
+  padding: 0.6rem 0;
+  margin-right: 30px;
+}
+
+.productDetail_a {
+  width: 30%;
+  border-radius: 30px;
+  border: 1px solid var(--green);
+  cursor: pointer;
+  color: var(--green);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2.8rem;
+  font-weight: 500;
+  padding: 0.6rem 0;
+  transition: ease-in-out 0.5s;
+}
+
+.productDetail_a:hover {
+  background-color: var(--green);
+  transition: ease-in-out 0.5s;
+  color: #fff;
+}
+
+.productDetail_4_ {
+  width: 70%;
+  display: flex;
+  border: 1px solid var(--green);
+  height: 100px;
+  align-items: center;
+  padding: 0 3rem;
+}
+
+.productDetail_4_i {
+  font-size: 4rem;
+  color: var(--lr-green);
+  margin-right: 3rem;
+}
+
+.productDetail_4_r {
+  font-size: 1.6rem;
+}
+
+/* Cart */
+.cart-container {
+  padding: 2rem 4rem;
+}
+.cart-container h2 {
+  font-weight: 400;
+  font-size: 4rem;
+  text-align: center;
+}
+.cart-container .titles {
+  margin: 2rem 0 1rem 0;
+}
+.cart-container .titles h3 {
+  font-size: 2.4rem;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+.cart-item,
+.cart-container .titles {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 3fr 1fr 1fr 1fr;
+  column-gap: 0.5rem;
+}
+.cart-item {
+  border-top: 1px solid rgb(187, 187, 187);
+  padding: 1rem 0;
+}
+.cart-container .titles .product-title {
+  padding-left: 0.5rem;
+}
+.cart-container .titles .total {
+  padding-right: 0.5rem;
+  justify-self: right;
+}
+.cart-item .cart-product {
+  display: flex;
+}
+.cart-item .cart-product img {
+  width: 100px;
+  max-width: 100%;
+  margin-right: 1rem;
+}
+.cart-item .cart-product h3 {
+  font-weight: 400;
+  font-size: 2.4rem;
+}
+
+.cart-product p {
+  font-size: 1.4rem;
+}
+.cart-item .cart-product button {
+  border: none;
+  outline: none;
+  margin-top: 0.7rem;
+  cursor: pointer;
+  background: none;
+  color: gray;
+  font-size: 1.6rem;
+}
+.cart-item .cart-product button:hover {
+  color: black;
+}
+
+.cart-item .cart-product-quantity {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 130px;
+  max-width: 100%;
+  border: 0.5px solid rgb(177, 177, 177);
+  border-radius: 5px;
+}
+.cart-item .cart-product-quantity button {
+  border: none;
+  outline: none;
+  background: none;
+  padding: 0.7rem 1.5rem;
+  cursor: pointer;
+}
+.cart-product-price,
+.cart-product-quantity {
+  font-size: 2rem;
+}
+
+.cart-item .cart-product-quantity .count {
+  padding: 0.7rem 0;
+}
+.cart-item .cart-product-total-price {
+  padding-right: 0.5rem;
+  justify-self: right;
+  font-weight: 700;
+  font-size: 2rem;
+}
+
+/* cart summary */
+.cart-summary {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  border-top: 1px solid rgb(187, 187, 187);
+  padding-top: 2rem;
+}
+.cart-summary .clear-btn {
+  width: 150px;
+  height: 50px;
+  border-radius: 5px;
+  font-weight: 400;
+  letter-spacing: 1.15px;
+  border: 0.5px solid rgb(177, 177, 177);
+  color: gray;
+  background: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 2rem;
+}
+.cart-checkout {
+  width: 270px;
+  max-width: 100%;
+}
+.cart-checkout .subtotal {
+  display: flex;
+  justify-content: space-between;
+  font-size: 3rem;
+}
+.cart-checkout .amount {
+  font-weight: 700;
+}
+.cart-checkout p {
+  font-size: 2rem;
+  font-weight: 200;
+  margin: 0.5rem 0;
+}
+.cart-checkout button {
+  width: 100%;
+  height: 50px;
+  border-radius: 5px;
+  font-weight: 400;
+  letter-spacing: 1.15px;
+  background-color: var(--green);
+  color: #f9f9f9;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 2rem;
+}
+.continue-shopping,
+.start-shopping {
+  margin-top: 1rem;
+}
+.continue-shopping a,
+.start-shopping a {
+  color: gray;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+.continue-shopping a span,
+.start-shopping a span {
+  margin-left: 0.5rem;
+}
+.cart-empty {
+  font-size: 2.5rem;
+  margin-top: 2rem;
+  color: rgb(84, 84, 84);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
